# autonope

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
autonope/: __init__.py  config.py  config.py.bak  init.py  main.py  notify.py  resolver.py
autonope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: config.yml
scripts/: compose_to_yaml.py
tests/: test_core.py
